@@ -348,6 +348,7 @@
 #define IDS_PROGRS_TITLE_COMMIT         1228
 #define IDC_SHOW_LOG                    1228
 #define IDS_PROGRS_TITLE_ADD            1229
+#define IDC_HIDEPATHS                   1229
 #define IDS_PROGRS_TITLE_REVERT         1230
 #define IDS_PROGRS_TITLE_RESOLVE        1231
 #define IDS_PROGRS_TITLE_SWITCH         1232
@@ -666,7 +667,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        207
 #define _APS_NEXT_COMMAND_VALUE         32789
-#define _APS_NEXT_CONTROL_VALUE         1229
+#define _APS_NEXT_CONTROL_VALUE         1230
 #define _APS_NEXT_SYMED_VALUE           195
 #endif
 #endif
